// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar el componente con la imagen del producto  1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product imag"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el componente correctamente con la imagen personalizada  1`] = `
<img
  alt="Product imag"
  className="productImg undefined"
  src="https://png.pngtree.com/element_our/20200702/ourmid/pngtree-vector-pattern-material-click-url-image_2281151.jpg"
/>
`;
